vehicle/tests/golden/error/scoping/recordFieldMispelled/spec.vcl
record Test where
  { fun : Real
  }

example : Test
example = { fu = 2 }
